# nanogpt_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bigram_lm.h  dataset.cpp  dataset.h  main.cpp  transformer.h
.github/workflows/: cmake.yml
scripts/: download_dataset.sh  install_libtorch.sh
